--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ body{
   background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);  
 }
 .container2{
-    margin-top: 150px;
+    margin-top: 100px;
     background-color: #d7f3ff;
-    width: 30%;
+      max-width: 500px;
+      width: 100%;
     margin-left: auto;
     margin-right: auto;
     box-shadow: inset 0 0 0 200px rgba(255, 255, 255, );
@@ -31,7 +32,9 @@ body{
   white-space: nowrap;
   cursor: pointer;
   transition: all 0.3s;
-  margin-left: 120px;
+  margin-left: 0;
+  display: block;
+  margin: 0 auto;
 }
 .button1:active,
 .button1:hover {
@@ -72,8 +75,14 @@ backdrop-filter: blur(10px);
   
 }
 .cen{
-  margin-left: 120px;
+  margin-left: 0;
+  display: block;
+  margin: 0 auto;
 }
 .main-c{
   margin-top: 200px;
+}
+img{
+  max-width: 100%;
+  height: auto;
 }
